--- a/public/mvp_links.html
+++ b/public/mvp_links.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html><head>
-<meta charset="utf-8"><title>MVP Links</title>
+<meta charset="utf-8"><title>MVP Links</</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <style>body{padding:20px} .small{font-size:.85rem;color:#666}</style>
 </head><body>
 <h3>MVP Quick Links</h3>
-<p class="small">Dev bypass is ON via <code>DEV_NO_AUTH=true</code>. These are read-only links to check routing status.</p>
+<p class="small">Dev bypass is ON via <code>DEV_NO_AUTH=true</code>.</p>
 
 <h5>Public</h5>
 <ul>
   <li><a href="https://mvp.dpharma.in/index.php/patient/intake" target="_blank">patient/intake</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/visits-lite?uid=250001&date=2025-08-11" target="_blank">visits-lite (sample)</a></li>
+  <li><a href="https://mvp.dpharma.in/index.php/tools/visits-admin-view" target="_blank">tools/visits-admin-view</a></li>
 </ul>
 
 <h5>Admin</h5>
@@ -19,9 +20,12 @@
   <li><a href="https://mvp.dpharma.in/index.php/admin" target="_blank">admin</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools" target="_blank">admin/tools</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate" target="_blank">admin/tools/migrate</a></li>
+  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug?step=1" target="_blank">admin/tools/migrate-debug?step=1</a></li>
+  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug-step?step=1" target="_blank">admin/tools/migrate-debug-step?step=1</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester" target="_blank">admin/tools/api-tester</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-android" target="_blank">admin/tools/api-tester-android</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-classic" target="_blank">admin/tools/api-tester-classic</a></li>
+  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/stable-api-tester" target="_blank">admin/tools/stable-api-tester</a></li>
   <li><a href="https://mvp.dpharma.in/index.php/admin/tools/db-check" target="_blank">admin/tools/db-check</a></li>
 </ul>
 
