--- a/public/mvp_links.html
+++ b/public/mvp_links.html
@@ -1,39 +1,68 @@
-<!doctype html>
-<html><head>
-<meta charset="utf-8"><title>MVP Links</</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-<style>body{padding:20px} .small{font-size:.85rem;color:#666}</style>
-</head><body>
-<h3>MVP Quick Links</h3>
-<p class="small">Dev bypass is ON via <code>DEV_NO_AUTH=true</code>.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MVP Links Dashboard</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 2rem; }
+    h2 { margin-top: 2rem; border-bottom: 1px solid #ccc; padding-bottom: 0.25rem; }
+    ul { list-style-type: none; padding-left: 0; }
+    li { margin: 0.5rem 0; }
+    a { text-decoration: none; color: #0366d6; }
+    a:hover { text-decoration: underline; }
+    code, pre { background: #f5f5f5; padding: 0.3rem 0.5rem; border-radius: 4px; display: block; margin: 0.5rem 0; }
+    .note { color: #666; font-size: 0.9em; }
+  </style>
+</head>
+<body>
+  <h1>MVP Project Links</h1>
 
-<h5>Public</h5>
-<ul>
-  <li><a href="https://mvp.dpharma.in/index.php/patient/intake" target="_blank">patient/intake</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/visits-lite?uid=250001&date=2025-08-11" target="_blank">visits-lite (sample)</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/tools/visits-admin-view" target="_blank">tools/visits-admin-view</a></li>
-</ul>
+  <h2>Admin</h2>
+  <ul>
+    <li><a href="https://mvp.dpharma.in/index.php/admin">Admin Home → Tools</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools">Admin Tools Menu</a></li>
+  </ul>
 
-<h5>Admin</h5>
-<ul>
-  <li><a href="https://mvp.dpharma.in/index.php/admin" target="_blank">admin</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools" target="_blank">admin/tools</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate" target="_blank">admin/tools/migrate</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug?step=1" target="_blank">admin/tools/migrate-debug?step=1</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug-step?step=1" target="_blank">admin/tools/migrate-debug-step?step=1</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester" target="_blank">admin/tools/api-tester</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-android" target="_blank">admin/tools/api-tester-android</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-classic" target="_blank">admin/tools/api-tester-classic</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/stable-api-tester" target="_blank">admin/tools/stable-api-tester</a></li>
-  <li><a href="https://mvp.dpharma.in/index.php/admin/tools/db-check" target="_blank">admin/tools/db-check</a></li>
-</ul>
+  <h2>Tools</h2>
+  <ul>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate">Migration Tool</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester">API Tester</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-android">Android Upload Tester</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-classic">Classic Upload Tester</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/db-check">DB Check</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/stable-api-tester">Stable API Tester</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug?key=arvindrchauhan1723&step=1">Migrate Debug (Step 1)</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug-step?key=arvindrchauhan1723&step=1">Migrate Debug Step (Step 1)</a></li>
+  </ul>
 
-<h5>API (POST)</h5>
-<ul>
-  <li><code>POST https://mvp.dpharma.in/index.php/api/visit/open</code></li>
-  <li><code>POST https://mvp.dpharma.in/index.php/api/visit/upload</code></li>
-  <li><code>POST https://mvp.dpharma.in/index.php/api/visit/map-orphans</code></li>
-</ul>
+  <h2>Visits</h2>
+  <ul>
+    <li><a href="https://mvp.dpharma.in/index.php/visits-lite?uid=250001&date=2025-08-11">Visits Lite (Example UID 250001)</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/tools/visits-admin-view?uid=250001&date=2025-08-11">Visits Admin View (Example UID 250001)</a></li>
+  </ul>
 
-</body></html>
+  <h2>Patient Intake</h2>
+  <ul>
+    <li><a href="https://mvp.dpharma.in/index.php/patient/intake">Patient Intake</a></li>
+  </ul>
+
+  <h2>Quick API curl Examples</h2>
+  <p class="note">These commands assume your <code>ANDROID_API_TOKEN</code> is <b>arvindrchauhan1723</b>.</p>
+
+  <h3>1. Open (create/get today's visit)</h3>
+  <pre><code>curl -s -X POST "https://mvp.dpharma.in/index.php/api/visit/open?token=arvindrchauhan1723" \
+  -d "uid=250001"</code></pre>
+
+  <h3>2. Upload (example image, type=rx)</h3>
+  <pre><code>curl -s -X POST "https://mvp.dpharma.in/index.php/api/visit/upload?token=arvindrchauhan1723" \
+  -F "uid=250001" \
+  -F "type=rx" \
+  -F "file=@/path/to/local/image.png"</code></pre>
+
+  <h3>3. List visits by date</h3>
+  <pre><code>curl -s "https://mvp.dpharma.in/index.php/api/visit/by-date?token=arvindrchauhan1723&amp;uid=250001&amp;date=2025-08-11"</code></pre>
+
+  <h3>4. Map Orphans</h3>
+  <pre><code>curl -s -X POST "https://mvp.dpharma.in/index.php/api/visit/map-orphans?token=arvindrchauhan1723"</code></pre>
+</body>
+</html>
