--- a/public/mvp_links.html
+++ b/public/mvp_links.html
@@ -39,6 +39,8 @@
   <ul>
     <li><a href="https://mvp.dpharma.in/index.php/visits-lite?uid=250001&date=2025-08-11">Visits Lite (Example UID 250001)</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/tools/visits-admin-view?uid=250001&date=2025-08-11">Visits Admin View (Example UID 250001)</a></li>
+	<li><a href="https://mvp.dpharma.in/index.php/admin/tools/visits-admin-view">Admin: Visits Admin View</a></li>
+
   </ul>
 
   <h2>Patient Intake</h2>
@@ -64,5 +66,7 @@
 
   <h3>4. Map Orphans</h3>
   <pre><code>curl -s -X POST "https://mvp.dpharma.in/index.php/api/visit/map-orphans?token=arvindrchauhan1723"</code></pre>
+  
+  
 </body>
 </html>
