--- a/public/mvp_links.html
+++ b/public/mvp_links.html
@@ -29,18 +29,19 @@
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester">API Tester</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-android">Android Upload Tester</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/api-tester-classic">Classic Upload Tester</a></li>
-    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/db-check">DB Check</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/stable-api-tester">Stable API Tester</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/db-check">DB Check</a></li>
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/visits-admin-view">Visits Admin View</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug?key=arvindrchauhan1723&step=1">Migrate Debug (Step 1)</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug-step?key=arvindrchauhan1723&step=1">Migrate Debug Step (Step 1)</a></li>
   </ul>
 
   <h2>Visits</h2>
   <ul>
+    <!-- keep public visits-lite as requested -->
     <li><a href="https://mvp.dpharma.in/index.php/visits-lite?uid=250001&date=2025-08-11">Visits Lite (Example UID 250001)</a></li>
-    <li><a href="https://mvp.dpharma.in/index.php/tools/visits-admin-view?uid=250001&date=2025-08-11">Visits Admin View (Example UID 250001)</a></li>
-	<li><a href="https://mvp.dpharma.in/index.php/admin/tools/visits-admin-view">Admin: Visits Admin View</a></li>
-
+    <!-- canonical admin page -->
+    <li><a href="https://mvp.dpharma.in/index.php/admin/tools/visits-admin-view?uid=250001&date=2025-08-11">Visits Admin View (Example UID 250001)</a></li>
   </ul>
 
   <h2>Patient Intake</h2>
@@ -66,7 +67,5 @@
 
   <h3>4. Map Orphans</h3>
   <pre><code>curl -s -X POST "https://mvp.dpharma.in/index.php/api/visit/map-orphans?token=arvindrchauhan1723"</code></pre>
-  
-  
 </body>
 </html>
