--- a/public/mvp_links.html
+++ b/public/mvp_links.html
@@ -35,6 +35,8 @@
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug?key=arvindrchauhan1723&step=1">Migrate Debug (Step 1)</a></li>
     <li><a href="https://mvp.dpharma.in/index.php/admin/tools/migrate-debug-step?key=arvindrchauhan1723&step=1">Migrate Debug Step (Step 1)</a></li>
 	<li><a href="https://mvp.dpharma.in/index.php/admin/tools/today">Today — Visits Pills</a></li>
+	<li><a href="https://mvp.dpharma.in/index.php/admin/tools/upload-tester-multi">Visual Upload Tester (multi)</a></li>
+
 
   </ul>
 
